--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,12 @@
     "Region": "us-west-2"
   },
   "Logging": {
+    "Region": "us-west-2",
+    "LogGroup": "apply-credit-card-logging",
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*"
